--- a/client/src/livingdocs-component-app/app.html
+++ b/client/src/livingdocs-component-app/app.html
@@ -4,7 +4,7 @@
   <require from="../styles/layout.css"></require>
   <require from="../styles/fonts.css"></require>
   <require from="../styles/q-form.css"></require>
-  <require from="../styles/app.css"></require>  
+  <require from="../styles/app.css"></require>
   <require from="./app.css"></require>
   <require from="../elements/atoms/box-icon.html"></require>
   <require from="../elements/item-preview/preview-container"></require>
@@ -52,6 +52,7 @@
           id="preview-container"
           width.bind="previewWidth"
           rendering-info.bind="renderingInfo"
+          target.bind="target"
           no-rendering-info-text="${'livingdocsComponent.selectGraphic' & t}">
         </preview-container>
       </div>
