--- a/client/src/elements/schema-editor/schema-editor-string.html
+++ b/client/src/elements/schema-editor/schema-editor-string.html
@@ -1,6 +1,6 @@
 <template class="schema-editor-input">
   <label>
     ${schema["title"]}
-    <input type="text" value.bind="data" required.bind="required" keyup.delegate="change() & debounce:800">
+    <input type="text" placeholder.to-view="options.placeholder || ''" value.bind="data" required.bind="required" keyup.delegate="change() & debounce:800">
   </label>
 </template>
