--- a/client/src/elements/schema-editor/schema-editor-url.html
+++ b/client/src/elements/schema-editor/schema-editor-url.html
@@ -1,6 +1,6 @@
 <template>
   <label>
     ${schema["title"]}
-    <input type="url" required.bind="required" value.bind="data" keyup.delegate="change() & debounce:800">
+    <input type="url" placeholder.to-view="options.placeholder || ''" required.bind="required" value.bind="data" keyup.delegate="change() & debounce:800">
   <label>
 </template>
