feat(editor): ask user before editing active item if configured

--- a/client/src/dialogs/confirm-dialog.html
+++ b/client/src/dialogs/confirm-dialog.html
@@ -5,8 +5,8 @@
       <h1 class="q-dialog-title">${config.confirmQuestion}</h1>
     </div>
     <div class="q-dialog__controls">
-      <button-yes click.delegate="controller.ok()">${'general.yes' & t}</button-yes>
-      <button-no click.delegate="controller.cancel()">${'general.no' & t}</button-yes>
+      <button-yes click.delegate="controller.ok()">${config.proceedText}</button-yes>
+      <button-no click.delegate="controller.cancel()">${config.cancelText}</button-yes>
     </div>
   </div>
 </template>
