--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -1,11 +1,32 @@
-<template css="background-color: ${previewColor}; color: ${previewColor};">
+<template>
   <require from="./preview-container.css"></require>
   <style>
     .preview-element-container {
+      height: 100%;
       overflow-x: auto;
       overflow-y: var(--preview-container-overflow-y, auto);
-      height: 100%;
+      border: solid 1px var(--q-color-gray-4);
     }
+
+    .preview-element-container__background {
+      background-color: var(--q-color-gray-3);
+    }
+
+    .preview-element {
+      margin: auto;
+      width: 50%;
+      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
+      padding: calc(var(--q-space-base) * 2);
+    }
+
+    .preview-text {
+      margin: 0;
+    }
+
+    .preview-q-element {
+      margin-top: calc(var(--q-space-base) * 2);
+    }
+
     .preview-note {
       font-size: var(--q-text-size);
       color: var(--q-text-ultralight-color);
@@ -15,9 +36,27 @@
     }
   </style>
   <div class="preview-note" if.bind="!renderingInfo && noRenderingInfoText">${noRenderingInfoText}</div>
-  <div class="preview-element-container" css="width: ${width}px; max-width: 100%;">
-    <div css="width: ${width}px;">
-      <div ref="previewElement"></div>
+  <div class="preview-element-container">
+    <div class="preview-element-container__background">
+      <div class="preview-element" css="width: ${width}px; background-color: ${previewColor};">
+        <div>
+          <p class="q-text preview-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+            gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+            elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="preview-q-element" ref="previewElement"></div>
+        <div>
+          <p class="q-text preview-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+            gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+            elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
     </div>
   </div>
 </template>
