--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -22,19 +22,21 @@
       </section>
       <section>
         <h2 t="general.preview"></h2>
-        <item-preview data.bind="previewData"></item-preview>
+        <div class="editor__preview">
+          <div class="editor__options" if.bind="optionsSchema">
+            <form ref="optionsForm" class="q-form" validate>
+              <schema-editor schema.bind="optionsSchema" data.bind="item.conf.options" change.call="handleChange()">
+                <h6>${optionsSchema.title || 'Optionen'}</h6>
+              </schema-editor>
+              <button ref="optionsFormSubmitButton" type="submit" style="display: none;"></button>
+            </form>
+          </div>
+          <item-preview data.bind="previewData"></item-preview>
+        </div>
       </section>
       <section>
         <meta-editor data.bind="item.conf" change.call="handleChange()"></meta-editor>
       </section>
     </main>
-    <div class="editor__options" if.bind="optionsSchema">
-      <form ref="optionsForm" class="q-form" validate>
-        <schema-editor schema.bind="optionsSchema" data.bind="item.conf.options" change.call="handleChange()">
-          <h6>${optionsSchema.title || 'Optionen'}</h6>
-        </schema-editor>
-        <button ref="optionsFormSubmitButton" type="submit" style="display: none;"></button>
-      </form>
-    </div>
   </section>
 </template>
