--- a/client/src/elements/schema-editor/schema-editor-geojson-point.html
+++ b/client/src/elements/schema-editor/schema-editor-geojson-point.html
@@ -13,11 +13,11 @@
     <div class="lat-lng-input ${showNotifications ? 'schema-editor-input--with-notifications' : ''}">
       <label>
         Latitude
-        <input type="number" step="any" value.bind="data.geometry.coordinates[1] | forceNumber" input.delegate="updateMarker(true)" required.bind="isRequired(schema.properties.geometry, 'coordinates')">
+        <input type="number" step="any" value.bind="data.geometry.coordinates[1] | forceNumber" input.delegate="updateMarker()" required.bind="isRequired(schema.properties.geometry, 'coordinates')">
       </label>
       <label>
         Longitude
-        <input type="number" step="any" value.bind="data.geometry.coordinates[0] | forceNumber" input.delegate="updateMarker(true)" required.bind="isRequired(schema.properties.geometry, 'coordinates')">
+        <input type="number" step="any" value.bind="data.geometry.coordinates[0] | forceNumber" input.delegate="updateMarker()" required.bind="isRequired(schema.properties.geometry, 'coordinates')">
       </label>
     </div>
   </div>
