--- a/client/src/pages/item-overview.html
+++ b/client/src/pages/item-overview.html
@@ -52,9 +52,11 @@
           <span t="item.delete"></span>
         </button-secondary>
 
-        <button-primary click.delegate="exportWithModal(target)" repeat.for="target of userExportableTargets">
-          <span>${target.userExportable.buttonLabel}</span>
-        </button-secondary>
+        <div class="item-overview__controls__exports">
+          <button-secondary click.delegate="exportWithModal(target)" repeat.for="target of userExportableTargets">
+            <span>${target.userExportable.buttonLabel}</span>
+          </button-secondary>
+        </div>
 
       </aside>
       <div>
