--- a/client/src/dialogs/export-dialog.html
+++ b/client/src/dialogs/export-dialog.html
@@ -15,7 +15,7 @@
     ></button-tertiary>
     <div class="q-dialog__content">
       <h1 class="q-dialog-title">
-        Grafik "${config.item.conf.title}" für Print herunterladen
+        ${config.modalTitle}
       </h1>
       <form ref="form" class="q-form" validate>
         <schema-editor
