(export) the userExportable config takes a download.file.nameMaxLength to limit the length of the filename (woodwing, looking at you)

--- a/client/src/dialogs/export-dialog.html
+++ b/client/src/dialogs/export-dialog.html
@@ -15,7 +15,7 @@
     ></button-tertiary>
     <div class="q-dialog__content">
       <h1 class="q-dialog-title">
-        ${config.modalTitle}
+        ${config.target.modalTitle}
       </h1>
       <form ref="form" class="q-form" validate>
         <schema-editor
