Implement code review feedback

--- a/client/src/dialogs/schema-editor-dialog.html
+++ b/client/src/dialogs/schema-editor-dialog.html
@@ -9,8 +9,7 @@
           schema.bind="config.schema"
           data.bind="config.data"
           notifications.bind="config.notifications"
-          show-notifications.bind="config.showNotifications"
-          change.call="config.change()">
+          show-notifications.bind="config.showNotifications">
         </schema-editor>
       </form>
     </div>
