--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -3,9 +3,12 @@
   <require from="elements/schema-editor/schema-editor"></require>
   <require from="elements/item-preview/item-preview"></require>
   <require from="elements/organisms/tool-status-bar"></require>
-  <q-bar if.bind="user.isLoggedIn" router.bind="router" class="q-bar--no-logo">
-    <a slot="back-button" class="q-bar__back" route-href="route: index">
+  <q-bar if.bind="user.isLoggedIn" router.bind="router">
+    <a slot="back-button" class="q-bar__back" route-href="route: item; params.bind: {id: item.id}">
       <button-secondary icon="back" icon-size="medium"></button-secondary>
+    </a>
+    <a slot="logo" route-href="route: index">
+      <icon-logo class="q-bar__logo"></icon-logo>
     </a>
     <language-switcher slot="language-switcher"></language-switcher>
     <tool-status-bar
