--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -4,7 +4,10 @@
   <require from="elements/item-preview/item-preview"></require>
   <require from="elements/organisms/tool-status-bar"></require>
   <q-bar if.bind="user.isLoggedIn" router.bind="router">
-    <a slot="back-button" class="q-bar__back" route-href="route: item; params.bind: {id: item.id}">
+    <a if.bind="item.id" slot="back-button" class="q-bar__back" route-href="route: item; params.bind: {id: item.id}">
+      <button-secondary icon="back" icon-size="medium"></button-secondary>
+    </a>
+    <a else slot="back-button" class="q-bar__back" route-href="route: index">
       <button-secondary icon="back" icon-size="medium"></button-secondary>
     </a>
     <a slot="logo" route-href="route: index">
